--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ package-lock.json
 
 # misc
 .DS_Store
-.env
+# .env
 .env.local
 .env.development.local
 .env.test.local
@@ -28,7 +28,7 @@ yarn-debug.log*
 yarn-error.log*
 
 #personal
-.drawio
+**/.drawio
 .vscode
 
 /backend/authentication-service/.env
