--- a/backend/api-gateaway-service/package.json
+++ b/backend/api-gateaway-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test1": "mocha  test/test.part1.mjs  --exit --timeout 10000 ",
     "test2": "mocha  test/test.part2.mjs  --exit --timeout 10000 ",
-    "start": "node src/server.js",
+    "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js",
     "test:watch": "mocha --watch --parallel --watch-files test/**/*.mjs"
   },
@@ -23,17 +23,13 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "kafka-node": "^5.0.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.2",
-    "pino-multi-stream": "^6.0.0",
-    "sinon": "^17.0.1"
+    "mongoose": "^8.2.2"
   },
   "devDependencies": {
-    "chai": "^5.1.0",
-    "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "pino": "^8.19.0",
-    "pino-pretty": "^10.3.1",
-    "supertest": "^6.3.4"
+    "pino-pretty": "^10.3.1"
   }
 }
