--- a/backend/authentication-service/.env
+++ b/backend/authentication-service/.env
@@ -1,3 +1,4 @@
 DB = mongodb+srv://admin:admin@lms.mqm8lgp.mongodb.net/authentication-service?retryWrites=true&w=majority&appName=LMS
 JWTPRIVATEKEY = shit01
 SALT = 10
+API_KEY = apikey
