--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.3.1",
     "@mui/x-date-pickers": "^7.2.0",
+    "@nivo/bar": "^0.86.0",
+    "@nivo/geo": "^0.86.0",
+    "@nivo/line": "^0.86.0",
+    "@nivo/pie": "^0.86.0",
+    "@nivo/stream": "^0.86.0",
     "@react-spring/web": "^9.7.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
@@ -22,15 +33,18 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "ldrs": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-image-gallery": "^1.3.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3",
     "sweetalert2": "^11.10.8",
-    "universal-cookie": "^7.1.4"
+    "universal-cookie": "^7.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
