--- a/backend/API-gateway/.env
+++ b/backend/API-gateway/.env
@@ -1,2 +1,3 @@
 SERVICE_NAME_AUTH = "http://localhost:2222/"
 SERVICE_NAME_LEC = "http://localhost:1113/"
+SERVICE_NAME_COURSE = "http://localhost:3002/"
