changed mongodb uri

--- a/backend/notification-service/.env
+++ b/backend/notification-service/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://vinukiiiamare:vinu1234@cluster1.dh3cfjv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+MONGODB_URI=mongodb+srv://admin:admin@lms.mqm8lgp.mongodb.net/authentication-service?retryWrites=true&w=majority&appName=LMS
