notification service intergrated to docker compose

--- a/backend/API-gateway/.env
+++ b/backend/API-gateway/.env
@@ -1,3 +1,4 @@
 SERVICE_NAME_AUTH = "http://localhost:2222/"
 SERVICE_NAME_LEC = "http://localhost:1113/"
 SERVICE_NAME_COURSE = "http://localhost:3002/"
+SERVICE_NAME_NOTIFICATION = "http://localhost:1114/"
