--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.8"
 services:
+
   authentication-service:
     container_name: authentication
     build: ./backend/authentication-service/
@@ -21,10 +22,12 @@ services:
     volumes:
       - ./backend/api-gateway:/app
     environment:
-      - SERVICE_NAME_AUTH=http://authentication-service:2222
       - SERVICE_NAME_LEC=http://lecturer-service:1113
+      - SERVICE_NAME_AUTH=http://authentication-service:2222
+      - SERVICE_NAME_PAY=http://payment-service:3001
       - SERVICE_NAME_COURSE=http://coursemanagement-service:3002
       - SERVICE_NAME_NOTIFICATION=http://notification-service:1114
+      - SERVICE_NAME_PROFILE=http://profile-management-SERVICE:1117
 
   lecturer-service:
     container_name: lecurers
@@ -65,4 +68,15 @@ services:
       - PORT=1114
       - MONGODB_URI=mongodb+srv://admin:admin@lms.mqm8lgp.mongodb.net/notification-service?retryWrites=true&w=majority&appName=LMS
       
+  profile-management-service:
+      container_name: profiles
+      build: ./backend/profile-management-service/
+      ports:
+        - "1117:1117"
+      volumes:
+        - ./backend/profile-management-service:/app
+      environment:
+        - PORT=1114
+        - MONGODB_URI=mongodb+srv://admin:admin@lms.mqm8lgp.mongodb.net/profile-management-service?retryWrites=true&w=majority&appName=LMS
+        
 
