--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,10 @@
     "react-image-gallery": "^1.3.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.10.8",
     "universal-cookie": "^7.1.4",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
