uploading updated to api gateway

--- a/backend/API-gateway/.env
+++ b/backend/API-gateway/.env
@@ -4,3 +4,4 @@ SERVICE_NAME_COURSE="http://localhost:3002/"
 SERVICE_NAME_NOTIFICATION="http://localhost:1114/"
 SERVICE_NAME_PAY="http://localhost:3001"
 SERVICE_NAME_PROFILE="http://localhost:1117"
+SERVICE_NAME_STORAGE="http://localhost:2345"
