--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
