--- a/backend/notification-service/package.json
+++ b/backend/notification-service/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.6.0",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "nodemailer": "^6.9.13"
   }
 }
